sections was added

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <header>
         <div class="container-fluid">
             <div class="row  align-items-center">
-                <div class="col-sm-2">
+                <div class="col-sm-2 col-md-2   ">
                     <img src="./imagenes/logo1.png" alt="">
                 </div>
-                <div class="col-md-12 col-xl-8">
-                    <div class="d-sm-none d-md-block col-md-12 col-lg">
+                <div class="col-sm col-xl-8">
+                    <div class="d-sm-none d-md-none d-lg-block">
                         <ul class="nav justify-content-sm-center justify-content-lg-center text-white">
                             <li class="nav-item">
                                 <a class="nav-link active text-white" href="">Inicio</a>
@@ -55,8 +55,107 @@
                     <img src="./imagenes/logo2.png" alt="">
                 </div>
             </div>
+            <div class="col-md-12 justify-content-md-center">
+                <div class="d-sm-none d-md-block d-lg-none">
+                    <ul class="nav justify-content-sm-center justify-content-lg-center text-white">
+                        <li class="nav-item">
+                            <a class="nav-link active text-white" href="">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="">Institucional</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="">Siniestros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="">Novedades</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="">Contactos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href=""><i class="fab fa-facebook-f"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href=""><i class="fab fa-linkedin-in"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href=""><i class="fab fa-twitter"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </header>
+    <section>
+        <div>
+            <img src="./imagenes/Cobertura-web.jpg" alt="">
+        </div>
+        <div class="container p-4">
+            <div class="row p-2">
+                <div class="col-sm-12 col-md-6">
+                    <img src="./imagenes/bannerizaquierda.png" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6">
+                    <img src="./imagenes/bannerDerecha.png" alt="">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img src="./imagenes/1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Personas</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img src="./imagenes/2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Empresas</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img src="./imagenes/3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Agropecuarias</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img src="./imagenes/4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Caución</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="pie">
+            <div class="container">
+                <div class="row p-5">
+                    <div class="col-sm-3 col-md-4">
+                        <img src="./imagenes/logo2.png" alt="">
+                    </div>
+                    <div class="col-sm-12 col-md-8 text-white">
+                        <h1>Calificación AA+</h1><br>
+                        <h3>Los valores que forman parte de nuestra filosofía empresaria se traducen en una gestión comprometida, confiable y de alta calidad para nuestros clientes.</h3>
+                        <p>Muestra de ello es que desde el año 2010, la Compañía ha alcanzado la destacada calificación AA+, otorgada por una importante calificadora de riesgos en base al riguroso análisis trimestral de nuestros principales indicadores económico-financieros.</p>
+                    </div>
+                    <div class="col-md"></div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
