fotter was added in to index.html

--- a/index.html
+++ b/index.html
@@ -156,6 +156,34 @@
             </div>
         </div>
     </section>
+    <footer class="gris">
+        <div class="container">
+            <div class="row p-4">
+                <div class="col-sm-6 col-md"></div>
+                <div class="col-md-2">
+                    <img src="./imagenes/5.gif" alt="">
+                    <h5 class="text-center">Servicios de Asistencia</h5>
+                </div>
+                <div class="col-sm-6 col-md-2">
+                    <img src="./imagenes/6.gif" alt="">
+                    <h5 class="text-center">¿Como actuar ante un siniestro?</h5>
+                </div>
+                <div class="col-sm-6 col-md-2">
+                    <img src="./imagenes/7.gif" alt="">
+                    <h5 class="text-center">Descarga nuestra APP</h5>
+                </div>
+                <div class="col-sm-6 col-md-2">
+                    <img src="./imagenes/8.gif" alt="">
+                    <h5 class="text-center">Contacto</h5>
+                </div>
+                <div class="col-sm-6 col-md-2">
+                    <img src="./imagenes/9.gif" alt="">
+                    <h5 class="text-center">Oficinas Comerciales</h5>
+                </div>
+                <div class="col-sm-6 col-md"></div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
